# distributed-real-time-analytics-system

./: AnalyticsNode.cpp  AnalyticsNode.h  CMakeLists.txt  CMakeLists.txt.user.91095e9  CMakeLists.txt.user.91095e9.xml  CMakeLists.txt.user.95db293.xml  DemoIngestionNode.cpp  DemoIngestionNode.h  MetadataNode.cpp  MetadataNode.h  README.md  RegisterNode.cpp  RegisterNode.h  Worker.cpp  Worker.h  main.cpp
